--- a/ch05/FinalAspire/Codebreaker.AppHost/appsettings.json
+++ b/ch05/FinalAspire/Codebreaker.AppHost/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning",
       "Aspire.Hosting.Dcp": "Warning"
     }
-  }
+  },
+  "DataStore": "Cosmos",
+
+  // change this to PreferLocal to use the Azure Cosmos DB local emulator (see the readme file how to install this on your local system, the emulator must be started)
+  // change this to PreferDocker to use the Azure Cosmos DB emulator in a Docker container (Docker Desktop must be installed and started)
+  // change this to UseAzure to use Azure resources while running locally! Check the user secrets (see the readme file)
+  "UseEmulator": "PreferDocker"
 }
