--- a/ch05/StartAspire/Codebreaker.GameAPIs/appsettings.json
+++ b/ch05/StartAspire/Codebreaker.GameAPIs/appsettings.json
@@ -6,8 +6,5 @@
     }
   },
   "AllowedHosts": "*",
-  "DataStore": "SqlServer",
-  "ConnectionStrings": {
-    "GamesSqlServerConnection": "server=(localdb)\\mssqllocaldb;database=CodebreakerGames;trusted_connection=true"
-  }
+  "DataStore": "SqlServer"
 }
