--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -6,6 +6,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageVersion Include="Aspire.Hosting.Garnet" Version="9.2.0" />
+    <PackageVersion Include="Aspire.Hosting.Keycloak" Version="9.2.1-preview.1.25222.1" />
     <PackageVersion Include="Aspire.Hosting.PostgreSQL" Version="9.2.1" />
     <PackageVersion Include="Aspire.Microsoft.Azure.Cosmos" Version="9.2.0" />
     <PackageVersion Include="Aspire.Azure.Messaging.EventHubs" Version="9.2.0" />
