Update launchSettings for HTTPS support
Changed the `applicationUrl` in `launchSettings.json` from
`http://localhost:5141` to `https://localhost:5142` to enable
secure connections on a different port.

--- a/ch05/FinalAspire/CodeBreaker.Bot/Properties/launchSettings.json
+++ b/ch05/FinalAspire/CodeBreaker.Bot/Properties/launchSettings.json
@@ -8,7 +8,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:5141",
+      "applicationUrl": "https://localhost:5142",
       "dotnetRunMessages": true
     },
     "Docker": {
