Refactor data store configuration and add service defaults
- Added project reference to `Codebreaker.ServiceDefaults`.
- Introduced `CodebreakerSettings` class for strongly-typed configuration.
- Refactored data store setup into separate methods for clarity.
- Updated `appsettings.json` to include new settings structure.
- Created `CodebreakerSettings.cs` for enums and settings class.
- Added `ServiceNames.cs` to define service name constants.

--- a/ch06/Codebreaker.AppHost/Codebreaker.AppHost.csproj
+++ b/ch06/Codebreaker.AppHost/Codebreaker.AppHost.csproj
@@ -24,6 +24,7 @@
     <ProjectReference Include="..\CodeBreaker.Bot\CodeBreaker.Bot.csproj" />
     <ProjectReference Include="..\Codebreaker.GameAPIs\Codebreaker.GameAPIs.csproj" />
     <ProjectReference Include="..\Codebreaker.SqlServerMigration\Codebreaker.SqlServerMigration.csproj" />
+    <ProjectReference Include="..\Codebreaker.ServiceDefaults\Codebreaker.ServiceDefaults.csproj" IsAspireProjectResource="False" />
   </ItemGroup>
   
 </Project>
