--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -6,38 +6,39 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageVersion Include="Aspire.Hosting.Docker" Version="9.2.1-preview.1.25222.1" />
-    <PackageVersion Include="Aspire.Hosting.Garnet" Version="9.2.0" />
+    <PackageVersion Include="Aspire.Hosting.Garnet" Version="9.2.1" />
     <PackageVersion Include="Aspire.Hosting.Keycloak" Version="9.2.1-preview.1.25222.1" />
+    <PackageVersion Include="Aspire.Hosting.Kubernetes" Version="9.2.1-preview.1.25222.1" />
     <PackageVersion Include="Aspire.Hosting.PostgreSQL" Version="9.2.1" />
-    <PackageVersion Include="Aspire.Microsoft.Azure.Cosmos" Version="9.2.0" />
-    <PackageVersion Include="Aspire.Azure.Messaging.EventHubs" Version="9.2.0" />
-    <PackageVersion Include="Aspire.Azure.Storage.Blobs" Version="9.2.0" />
-    <PackageVersion Include="Aspire.Azure.Storage.Queues" Version="9.2.0" />
-    <PackageVersion Include="Aspire.Confluent.Kafka" Version="9.2.0" />
-    <PackageVersion Include="Aspire.Hosting.AppHost" Version="9.2.0" />
-    <PackageVersion Include="Aspire.Hosting.Azure" Version="9.2.0" />
-    <PackageVersion Include="Aspire.Hosting.Azure.AppConfiguration" Version="9.2.0" />
-    <PackageVersion Include="Aspire.Hosting.Azure.ApplicationInsights" Version="9.2.0" />
-    <PackageVersion Include="Aspire.Hosting.Azure.CosmosDB" Version="9.2.0" />
-    <PackageVersion Include="Aspire.Hosting.Azure.EventHubs" Version="9.2.0" />
-    <PackageVersion Include="Aspire.Hosting.Azure.KeyVault" Version="9.2.0" />
-    <PackageVersion Include="Aspire.Hosting.Azure.SignalR" Version="9.2.0" />
-    <PackageVersion Include="Aspire.Hosting.Azure.Sql" Version="9.2.0" />
-    <PackageVersion Include="Aspire.Hosting.Azure.Storage" Version="9.2.0" />
-    <PackageVersion Include="Aspire.Hosting.MongoDB" Version="9.2.0" />
-    <PackageVersion Include="Aspire.Hosting.MySql" Version="9.2.0" />
-    <PackageVersion Include="Aspire.Hosting.Kafka" Version="9.2.0" />
-    <PackageVersion Include="Aspire.Hosting.RabbitMQ" Version="9.2.0" />
-    <PackageVersion Include="Aspire.Hosting.Redis" Version="9.2.0" />
-    <PackageVersion Include="Aspire.Hosting.SqlServer" Version="9.2.0" />
-    <PackageVersion Include="Aspire.Hosting.Testing" Version="9.2.0" />
-    <PackageVersion Include="Aspire.Microsoft.EntityFrameworkCore.Cosmos" Version="9.2.0" />
-    <PackageVersion Include="Aspire.Microsoft.EntityFrameworkCore.SqlServer" Version="9.2.0" />
-    <PackageVersion Include="Aspire.MongoDB.Driver.v3" Version="9.2.0" />
-    <PackageVersion Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.2.0" />
-    <PackageVersion Include="Aspire.Pomelo.EntityFrameworkCore.MySql" Version="9.2.0" />
-    <PackageVersion Include="Aspire.StackExchange.Redis" Version="9.2.0" />
-    <PackageVersion Include="Aspire.StackExchange.Redis.DistributedCaching" Version="9.2.0" />
+    <PackageVersion Include="Aspire.Microsoft.Azure.Cosmos" Version="9.2.1" />
+    <PackageVersion Include="Aspire.Azure.Messaging.EventHubs" Version="9.2.1" />
+    <PackageVersion Include="Aspire.Azure.Storage.Blobs" Version="9.2.1" />
+    <PackageVersion Include="Aspire.Azure.Storage.Queues" Version="9.2.1" />
+    <PackageVersion Include="Aspire.Confluent.Kafka" Version="9.2.1" />
+    <PackageVersion Include="Aspire.Hosting.AppHost" Version="9.2.1" />
+    <PackageVersion Include="Aspire.Hosting.Azure" Version="9.2.1" />
+    <PackageVersion Include="Aspire.Hosting.Azure.AppConfiguration" Version="9.2.1" />
+    <PackageVersion Include="Aspire.Hosting.Azure.ApplicationInsights" Version="9.2.1" />
+    <PackageVersion Include="Aspire.Hosting.Azure.CosmosDB" Version="9.2.1" />
+    <PackageVersion Include="Aspire.Hosting.Azure.EventHubs" Version="9.2.1" />
+    <PackageVersion Include="Aspire.Hosting.Azure.KeyVault" Version="9.2.1" />
+    <PackageVersion Include="Aspire.Hosting.Azure.SignalR" Version="9.2.1" />
+    <PackageVersion Include="Aspire.Hosting.Azure.Sql" Version="9.2.1" />
+    <PackageVersion Include="Aspire.Hosting.Azure.Storage" Version="9.2.1" />
+    <PackageVersion Include="Aspire.Hosting.MongoDB" Version="9.2.1" />
+    <PackageVersion Include="Aspire.Hosting.MySql" Version="9.2.1" />
+    <PackageVersion Include="Aspire.Hosting.Kafka" Version="9.2.1" />
+    <PackageVersion Include="Aspire.Hosting.RabbitMQ" Version="9.2.1" />
+    <PackageVersion Include="Aspire.Hosting.Redis" Version="9.2.1" />
+    <PackageVersion Include="Aspire.Hosting.SqlServer" Version="9.2.1" />
+    <PackageVersion Include="Aspire.Hosting.Testing" Version="9.2.1" />
+    <PackageVersion Include="Aspire.Microsoft.EntityFrameworkCore.Cosmos" Version="9.2.1" />
+    <PackageVersion Include="Aspire.Microsoft.EntityFrameworkCore.SqlServer" Version="9.2.1" />
+    <PackageVersion Include="Aspire.MongoDB.Driver.v3" Version="9.2.1" />
+    <PackageVersion Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.2.1" />
+    <PackageVersion Include="Aspire.Pomelo.EntityFrameworkCore.MySql" Version="9.2.1" />
+    <PackageVersion Include="Aspire.StackExchange.Redis" Version="9.2.1" />
+    <PackageVersion Include="Aspire.StackExchange.Redis.DistributedCaching" Version="9.2.1" />
     <PackageVersion Include="Azure.Data.AppConfiguration" Version="1.6.0" />
     <PackageVersion Include="Azure.Identity" Version="1.13.2" />
     <PackageVersion Include="Azure.Monitor.OpenTelemetry.AspNetCore" Version="1.2.0" />
