--- a/ch07/Codebreaker.AppHost/Codebreaker.AppHost.csproj
+++ b/ch07/Codebreaker.AppHost/Codebreaker.AppHost.csproj
@@ -1,32 +1,36 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <Sdk Name="Aspire.AppHost.Sdk" Version="9.1.0" />
+  <Sdk Name="Aspire.AppHost.Sdk" Version="9.2.1" />
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <IsAspireHost>true</IsAspireHost>
     <UserSecretsId>e5b2b032-a39b-47c9-a686-c8e69576dc7b</UserSecretsId>
   </PropertyGroup>
 
+	<PropertyGroup>
+		<NoWarn>$(NoWarn);ASPIRECOSMOSDB001</NoWarn>
+	</PropertyGroup>	
+
   <ItemGroup>
-    <PackageReference Include="Aspire.Hosting.AppHost"/>
-    <PackageReference Include="Aspire.Hosting.Azure"/>
-    <PackageReference Include="Aspire.Hosting.Azure.AppConfiguration"/>
-    <PackageReference Include="Aspire.Hosting.Azure.CosmosDB"/>
-    <PackageReference Include="Aspire.Hosting.Azure.KeyVault"/>
-    <PackageReference Include="Aspire.Hosting.Azure.Sql"/>
+    <PackageReference Include="Aspire.Hosting.AppHost" />
+    <PackageReference Include="Aspire.Hosting.Azure" />
+    <PackageReference Include="Aspire.Hosting.Azure.AppConfiguration" />
+    <PackageReference Include="Aspire.Hosting.Azure.CosmosDB" />
+    <PackageReference Include="Aspire.Hosting.Azure.KeyVault" />
+    <PackageReference Include="Aspire.Hosting.Azure.Sql" />
+    <PackageReference Include="Aspire.Hosting.MongoDB" />
+    <PackageReference Include="Aspire.Hosting.PostgreSQL" />
+    <PackageReference Include="Aspire.Hosting.SqlServer" />
+
   </ItemGroup>
-  
   <ItemGroup>
     <ProjectReference Include="..\CodeBreaker.Bot\CodeBreaker.Bot.csproj" />
-    <ProjectReference Include="..\Codebreaker.CosmosCreate\Codebreaker.CosmosCreate.csproj" />
     <ProjectReference Include="..\Codebreaker.GameAPIs\Codebreaker.GameAPIs.csproj" />
     <ProjectReference Include="..\Codebreaker.InitalizeAppConfig\Codebreaker.InitalizeAppConfig.csproj" />
-    <ProjectReference Include="..\Codebreaker.SqlServerMigration\Codebreaker.SqlServerMigration.csproj" />
     <ProjectReference Include="..\ConfigurationPrototype\ConfigurationPrototype.csproj" />
+    <ProjectReference Include="..\Codebreaker.ServiceDefaults\Codebreaker.ServiceDefaults.csproj" IsAspireProjectResource="False" />
   </ItemGroup>
-
 </Project>
