--- a/ch07/Codebreaker.GameAPIs/appsettings.json
+++ b/ch07/Codebreaker.GameAPIs/appsettings.json
@@ -5,9 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "DataStore": "Cosmos",
-  "ConnectionStrings": {
-    "GamesSqlServerConnection": "server=(localdb)\\mssqllocaldb;database=CodebreakerGames;trusted_connection=true"
-  }
+  "AllowedHosts": "*"
 }
