--- a/ch07/Codebreaker.InitalizeAppConfig/Codebreaker.InitalizeAppConfig.csproj
+++ b/ch07/Codebreaker.InitalizeAppConfig/Codebreaker.InitalizeAppConfig.csproj
@@ -5,6 +5,8 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>dotnet-Codebreaker.InitalizeAppConfig-3352ce58-f9c1-421b-a4f4-e502bec12b3e</UserSecretsId>
+    <IsPublishable>true</IsPublishable>
+    <EnableSdkContainerSupport>true</EnableSdkContainerSupport>
   </PropertyGroup>
 
   <ItemGroup>
