ch10 starter code from previous chapter

--- a/ch10/Start/Codebreaker.GameAPIs/appsettings.json
+++ b/ch10/Start/Codebreaker.GameAPIs/appsettings.json
@@ -6,6 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-  "DataStore": "InMemory",
-  "SolutionEnvironment": "Test"
+  "DataStore": "Cosmos",
+  "ConnectionStrings": {
+    "GamesSqlServerConnection": "server=(localdb)\\mssqllocaldb;database=CodebreakerGames;trusted_connection=true"
+  }
 }
