--- a/ch10/Start/CodeBreaker.Bot/CodeBreaker.Bot.csproj
+++ b/ch10/Start/CodeBreaker.Bot/CodeBreaker.Bot.csproj
@@ -7,12 +7,13 @@
     <UserSecretsId>4053495e-84a4-48c2-91d3-4b8290310020</UserSecretsId>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
-
+  
   <ItemGroup>
-    <PackageReference Include="Azure.Identity"/>
-    <PackageReference Include="CNinnovation.Codebreaker.GamesClient"/>
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi"/>
-    <PackageReference Include="Swashbuckle.AspNetCore"/>
+    <PackageReference Include="CNinnovation.Codebreaker.GamesClient" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
+    <PackageReference Include="Swashbuckle.AspNetCore" />
+    <PackageReference Include="Microsoft.Extensions.Azure" />
+	<PackageReference Include="Microsoft.Extensions.Configuration.AzureAppConfiguration" />
   </ItemGroup>
 
   <ItemGroup>
