--- a/ch10/Start/CodeBreaker.Bot/appsettings.Development.json
+++ b/ch10/Start/CodeBreaker.Bot/appsettings.Development.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "SolutionEnvironment": "Azure"
+  "ApiBase": "https://codebreaker-gamesapi-3.purplebush-9a246700.westeurope.azurecontainerapps1.io",
+  "ApiBase1": "http://localhost:9400"
 }
