--- a/ch10/Start/Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj
+++ b/ch10/Start/Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj
@@ -9,18 +9,22 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <InternalsVisibleTo Include="Codebreaker.GameAPIs.Tests" />
-    <InternalsVisibleTo Include="Codebreaker.GameAPIs.IntegrationTests" />
+    <InternalsVisibleTo Include="Codbreaker.APIs.Tests" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.Cosmos"/>
-    <PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.SqlServer"/>
-    <PackageReference Include="CNinnovation.Codebreaker.Cosmos"/>
-    <PackageReference Include="CNinnovation.Codebreaker.SqlServer"/>
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi"/>
-    <PackageReference Include="Swashbuckle.AspNetCore"/>
-    <PackageReference Include="Swashbuckle.AspNetCore.Annotations"/>
+    <PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.Cosmos" />
+    <PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.SqlServer" />
+	<PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" />
+    <PackageReference Include="CNinnovation.Codebreaker.Cosmos" />
+    <PackageReference Include="CNinnovation.Codebreaker.Postgres" />
+    <PackageReference Include="CNinnovation.Codebreaker.SqlServer" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
+    <PackageReference Include="Microsoft.FeatureManagement.AspNetCore" />
+    <PackageReference Include="Swashbuckle.AspNetCore" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" />
+    <PackageReference Include="Microsoft.Extensions.Azure" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.AzureAppConfiguration" />
   </ItemGroup>
 
   <ItemGroup>
