--- a/ch11/Codebreaker.AppHost/Properties/launchSettings.json
+++ b/ch11/Codebreaker.AppHost/Properties/launchSettings.json
@@ -3,56 +3,27 @@
   "profiles": {
     "https": {
       "commandName": "Project",
-      "launchBrowser": true,
       "dotnetRunMessages": true,
+      "launchBrowser": true,
       "applicationUrl": "https://localhost:15101;http://localhost:15100",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "DOTNET_ENVIRONMENT": "Development",
-        "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "https://localhost:16037",
-        "DOTNET_RESOURCE_SERVICE_ENDPOINT_URL": "https://localhost:17037",
-        "DOTNET_ASPIRE_SHOW_DASHBOARD_RESOURCES": "true",
-        "STARTUP_MODE": "Azure"
+        "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "https://localhost:16263",
+        "DOTNET_RESOURCE_SERVICE_ENDPOINT_URL": "https://localhost:22052"
       }
     },
     "http": {
       "commandName": "Project",
-      "launchBrowser": true,
       "dotnetRunMessages": true,
+      "launchBrowser": true,
       "applicationUrl": "http://localhost:15100",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "DOTNET_ENVIRONMENT": "Development",
-        "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "http://localhost:16037",
-        "DOTNET_RESOURCE_SERVICE_ENDPOINT_URL": "http://localhost:17037",
-        "DOTNET_ASPIRE_SHOW_DASHBOARD_RESOURCES": "true",
-        "ASPIRE_ALLOW_UNSECURED_TRANSPORT": "true",
-        "STARTUP_MODE": "Azure"
-      }
-    },
-    "OnPremises": {
-      "commandName": "Project",
-      "launchBrowser": true,
-      "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:15100",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
-        "DOTNET_ENVIRONMENT": "Development",
-        "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "http://localhost:16037",
-        "DOTNET_RESOURCE_SERVICE_ENDPOINT_URL": "http://localhost:17037",
-        "DOTNET_ASPIRE_SHOW_DASHBOARD_RESOURCES": "true",
-        "ASPIRE_ALLOW_UNSECURED_TRANSPORT": "true",
-        "STARTUP_MODE": "OnPremises",
-        "DataStore": "SqlServer"
-      }
-    },
-    "generate-manifest": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
-      "commandLineArgs": "--publisher manifest --output-path aspire-manifest.json",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
-        "DOTNET_ENVIRONMENT": "Development"
+        "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "http://localhost:16264",
+        "DOTNET_RESOURCE_SERVICE_ENDPOINT_URL": "http://localhost:20236",
+        "ASPIRE_ALLOW_UNSECURED_TRANSPORT": "True"
       }
     }
   }
