Add telemetry support and new project for monitoring
- Updated solution to include "otelcollector" project and config file.
- Enhanced test method names for better readability in `CodeBreakerAlgorithmsTests.cs`.
- Reorganized global using directives in `GlobalUsings.cs`.
- Updated configuration files for logging and API settings.
- Improved array syntax in `GamesFactoryTests.cs` for consistency.
- Updated `config.yaml` and `grafana.ini` for Prometheus and OpenTelemetry settings.
- Improved flexibility in `default.yaml` using environment variables.

--- a/ch11/Codebreaker.AppHost/appsettings.json
+++ b/ch11/Codebreaker.AppHost/appsettings.json
@@ -18,6 +18,9 @@
     // change this to UseAzure to use Azure resources while running locally! Check the user secrets (see the readme file)
     "UseEmulator": "PreferDocker",
 
-    "StartupMode": "Azure"
+    // change this to None to just use the dashboard
+    // change this to AzureMonitor to use Azure App Insights with Azure Monitor
+    // change this to GrafanaAndPrometheus to use Grafana and Prometheus
+    "Telemetry": "AzureMonitor"
   }
 }
