--- a/ch11/Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj
+++ b/ch11/Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj
@@ -1,33 +1,34 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-	<PropertyGroup>
-		<TargetFramework>net9.0</TargetFramework>
-		<Nullable>enable</Nullable>
-		<ImplicitUsings>enable</ImplicitUsings>
-		<InvariantGlobalization>false</InvariantGlobalization>
-		<Configurations>Debug;Release</Configurations>
-		<UserSecretsId>cbcf2abc-90fd-4633-826b-e1e28d712333</UserSecretsId>
-	</PropertyGroup>
+  <PropertyGroup>
+    <TargetFramework>net9.0</TargetFramework>
+    <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <InvariantGlobalization>false</InvariantGlobalization>
+    <UserSecretsId>603964e6-08bc-40f9-8505-074b9466a41f</UserSecretsId>
+  </PropertyGroup>
 
-	<ItemGroup>
-		<InternalsVisibleTo Include="Codebreaker.GameAPIs.Tests" />
-		<InternalsVisibleTo Include="Codebreaker.GameAPIs.IntegrationTests" />
-	</ItemGroup>
+  <ItemGroup>
+    <InternalsVisibleTo Include="Codbreaker.APIs.Tests" />
+  </ItemGroup>
 
-	<ItemGroup>
-		<PackageReference Include="Aspire.Microsoft.Azure.Cosmos" />
-		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.SqlServer" />
-		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.Cosmos"/>
-		<PackageReference Include="Aspire.StackExchange.Redis"/>
-		<PackageReference Include="Microsoft.AspNetCore.OpenApi"/>
-		<PackageReference Include="Swashbuckle.AspNetCore"/>
-		<PackageReference Include="Swashbuckle.AspNetCore.Annotations"/>
-		<PackageReference Include="CNinnovation.Codebreaker.SqlServer"/>
-		<PackageReference Include="CNinnovation.Codebreaker.Cosmos"/>
-	</ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.Cosmos" />
+    <PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.SqlServer" />
+	<PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" />
+    <PackageReference Include="CNinnovation.Codebreaker.Cosmos" />
+    <PackageReference Include="CNinnovation.Codebreaker.Postgres" />
+    <PackageReference Include="CNinnovation.Codebreaker.SqlServer" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
+    <PackageReference Include="Microsoft.FeatureManagement.AspNetCore" />
+    <PackageReference Include="Swashbuckle.AspNetCore" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" />
+    <PackageReference Include="Microsoft.Extensions.Azure" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.AzureAppConfiguration" />
+  </ItemGroup>
 
-	<ItemGroup>
-		<ProjectReference Include="..\Codebreaker.ServiceDefaults\Codebreaker.ServiceDefaults.csproj" />
-	</ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Codebreaker.ServiceDefaults\Codebreaker.ServiceDefaults.csproj" />
+  </ItemGroup>
 
 </Project>
