--- a/ch11/grafana/config/grafana.ini
+++ b/ch11/grafana/config/grafana.ini
@@ -2,7 +2,7 @@
 enabled = true
 
 # Organization name that should be used for unauthenticated users
-org_name = Main Org.
+org_name = Codebreaker Org.
 
 # Role for unauthenticated users, other valid values are `Editor` and `Admin`
 org_role = Admin
