Add Valkey caching support to the application
- Introduced `Aspire.Hosting.Valkey` package for caching.
- Updated `Program.cs` to handle `Valkey` in caching logic.
- Added Valkey configuration in `ApplicationServices.cs`.
- Modified `CachingType` enum in `CodebreakerSettings.cs` to include `Valkey`.

--- a/ch12/Codebreaker.AppHost/Codebreaker.AppHost.csproj
+++ b/ch12/Codebreaker.AppHost/Codebreaker.AppHost.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="Aspire.Hosting.Garnet" />
     <PackageReference Include="Aspire.Hosting.PostgreSQL" />
     <PackageReference Include="Aspire.Hosting.Redis" />
+    <PackageReference Include="Aspire.Hosting.Valkey" />
   </ItemGroup>
   
   <ItemGroup>
