ch12 Refactor application services and update data stores
- Updated `ApplicationServices.cs` to add PostgreSQL and Cosmos DB support, and refactor telemetry methods.
- Modified `Codebreaker.GameAPIs.csproj` to update UserSecretsId and include new package references.
- Changed host address from HTTP to HTTPS in `Codebreaker.GameAPIs.http`.
- Introduced `DataContextProxy.cs` for asynchronous game data operations.
- Refactored `GamesMemoryRepository.cs` to improve logging and simplify cleanup logic.
- Added `CreateDatabaseEndpoint.cs` for SQL database migration endpoint.
- Updated `GlobalUsings.cs` to include new namespaces for data access.
- Streamlined application startup in `Program.cs` with health checks.
- Modified `launchSettings.json` for local development URL updates.
- Updated `GamesFactory.cs` for improved game code generation.
- Refactored `GamesService.cs` to enhance service methods and separate caching logic.
- Added `GamesServiceWithCaching.cs` for distributed caching of game data.
- Updated configuration files to switch default data store from SQL Server to Cosmos DB.

--- a/ch12/Codebreaker.GameAPIs/Properties/launchSettings.json
+++ b/ch12/Codebreaker.GameAPIs/Properties/launchSettings.json
@@ -1,20 +1,23 @@
 {
+  "$schema": "https://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "Codebreaker.GameAPIs": {
+    "https": {
       "commandName": "Project",
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:9400",
+      "applicationUrl": "https://localhost:9403;http://localhost:9404",
       "dotnetRunMessages": true
     },
-    "Docker": {
-      "commandName": "Docker",
-      "launchBrowser": true,
-      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
-      "publishAllPorts": true
+    "http": {
+      "commandName": "Project",
+      "launchUrl": "swagger",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "applicationUrl": "http://localhost:9404",
+      "dotnetRunMessages": true
     }
-  },
-  "$schema": "https://json.schemastore.org/launchsettings.json"
+  }
 }
