ch13 Aspire 9.2 updates
This commit introduces several enhancements and updates across the Bootstrap framework and the GamesService functionality. Key changes include:

- Added a new Blazor project `Codebreaker.Blazor.LiveClient` to the solution.
- Updated `GamesService` to modify the `ReportGameEndedAsync` method call.

These changes aim to improve the overall functionality, responsiveness, and user experience of the application.

--- a/ch13/Codebreaker.AppHost/Codebreaker.AppHost.csproj
+++ b/ch13/Codebreaker.AppHost/Codebreaker.AppHost.csproj
@@ -26,6 +26,7 @@
   </ItemGroup>
   
   <ItemGroup>
+    <ProjectReference Include="..\Codebreaker.Blazor.LiveClient\Codebreaker.Blazor.LiveClient.csproj" />
     <ProjectReference Include="..\CodeBreaker.Bot\CodeBreaker.Bot.csproj" />
     <ProjectReference Include="..\Codebreaker.GameAPIs\Codebreaker.GameAPIs.csproj" />
     <ProjectReference Include="..\Codebreaker.Live\Codebreaker.Live.csproj" />
