--- a/ch13/Codebreaker.AppHost/appsettings.json
+++ b/ch13/Codebreaker.AppHost/appsettings.json
@@ -31,6 +31,6 @@
     // change this to None to don't use any game monitoring
     // change this to SignalR to use the live service with SignalR
     // change this to SignalRWithAzure to use the live service with SignalR and Azure SignalR Service
-    "LiveGameMonitoring": "None"
+    "LiveGameMonitoring": "SignalR"
   }
 }
