Add Loki and Jaeger support for enhanced telemetry
This commit introduces support for Loki and Jaeger alongside existing telemetry options for Grafana and Prometheus. Key changes include:

- Updated `AppHost.cs` to include Loki and Jaeger in the `TelemetryType.GrafanaAndPrometheus` case.
- Added `AddLoki` and `AddJaeger` methods in `ModelExtensions.cs` for container integration.
- Changed telemetry setting in `appsettings.json` from `AzureMonitor` to `GrafanaAndPrometheus`.
- Modified `default.yaml` and `datasources:` to include Loki as a data source.
- Enhanced Prometheus metric queries in `aspnetcore-endpoint.json` and `aspnetcore.json`.
- Introduced `games-metrics.json` for a dedicated Games API metrics dashboard.
- Added `loki.yml` for Loki configuration and updated `config.yaml` to export logs to Loki.
- Adjusted `prometheus.yml` scrape configurations for new endpoints.

These changes significantly improve the application's observability by integrating logging and tracing capabilities.

--- a/ch11/grafana/config/provisioning/datasources/default.yaml
+++ b/ch11/grafana/config/provisioning/datasources/default.yaml
@@ -7,3 +7,9 @@ datasources:
     # Access mode - proxy (server in the UI) or direct (browser in the UI).
     url: $PROMETHEUS_ENDPOINT
     uid: PBFA97CFB590B2093
+  - name: Loki
+    type: loki
+    access: proxy
+    url: http://loki:3100
+    isDefault: false
+    editable: true
