--- a/ch11/grafana/config/provisioning/dashboards/default.yaml
+++ b/ch11/grafana/config/provisioning/dashboards/default.yaml
@@ -2,8 +2,9 @@ apiVersion: 1
 
 providers:
   - name: Default
-    folder: .NET
+    folder: '.NET'
     type: file
     options:
-      path:
+      path: 
         /var/lib/grafana/dashboards
+      
