--- a/ch11/prometheus/prometheus.yml
+++ b/ch11/prometheus/prometheus.yml
@@ -1,10 +1,9 @@
-global:
-  scrape_interval: 1s # 1s makes for a good demo
+storage:
+  tsdb:
+    out_of_order_time_window: 30m
 
 scrape_configs:
-  - job_name: 'codebreakergames'
+  - job_name: 'otelcollector'
     static_configs:
-      - targets: ['host.docker.internal:9400'] # hard-coded port matches launchSettings.json
-  - job_name: 'codebreakerbot'
-    static_configs:
-      - targets: ['host.docker.internal:5141'] # hard-coded port matches launchSettings.json 
+    - targets: ['otelcollector:9464'] 
+
