Enhance Prometheus and OpenTelemetry configurations
- Updated `ModelExtensions.cs` to include a version parameter for the Prometheus container.
- Refactored `OpenTelemetryCollectorLifecycleHook.cs` to use a primary constructor for the logger, removing the private field.
- Modified `config.yaml` to consolidate the exporters section into a single line array format.
- Commented out the `scrape_configs` section in `prometheus.yml` and added a new `otlp:` section.

--- a/ch11/otelcollector/config.yaml
+++ b/ch11/otelcollector/config.yaml
@@ -37,9 +37,7 @@ service:
     traces:
       receivers: [otlp]
       processors: [batch]
-      exporters: 
-        - otlp/aspire
-        # - oltp/jaeger 
+      exporters: [otlp/aspire]
     logs:
       receivers: [otlp]
       processors: [batch]
