--- a/ch11/prometheus/prometheus.yml
+++ b/ch11/prometheus/prometheus.yml
@@ -2,8 +2,10 @@ storage:
   tsdb:
     out_of_order_time_window: 30m
 
-scrape_configs:
-  - job_name: 'otelcollector'
-    static_configs:
-    - targets: ['otelcollector:9464'] 
+# scrape_configs:
+#   - job_name: 'otelcollector'
+#     static_configs:
+#     - targets: ['otelcollector:9464'] 
 
+    
+otlp:
