Add Seq telemetry integration to the application
This commit introduces a new telemetry option, `Seq`, enhancing the application's logging capabilities. Key changes include:

- Added support for `TelemetryType.Seq` in `AppHost.cs`.
- Included `Aspire.Hosting.Seq` reference in `Codebreaker.AppHost.csproj`.
- Added `Aspire.Seq` reference in `Codebreaker.ServiceDefaults.csproj`.
- Updated `TelemetryType` enum in `CodebreakerSettings.cs` to include `Seq`.
- Implemented logic in `Extensions.cs` to configure Seq telemetry based on settings.
- Updated `Readme.md` to guide users on configuring the new telemetry option.

These changes provide developers with more flexibility in monitoring application performance and behavior.

--- a/ch11/Codebreaker.ServiceDefaults/Codebreaker.ServiceDefaults.csproj
+++ b/ch11/Codebreaker.ServiceDefaults/Codebreaker.ServiceDefaults.csproj
@@ -10,8 +10,9 @@
 
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Aspire.Seq" />
 
-    <PackageReference Include="Azure.Monitor.OpenTelemetry.AspNetCore"/>
+    <PackageReference Include="Azure.Monitor.OpenTelemetry.AspNetCore" />
     <PackageReference Include="Microsoft.Extensions.Http.Resilience" />
     <PackageReference Include="Microsoft.Extensions.ServiceDiscovery" />
     <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" />
