--- a/ch11/Codebreaker.AppHost/Codebreaker.AppHost.csproj
+++ b/ch11/Codebreaker.AppHost/Codebreaker.AppHost.csproj
@@ -14,11 +14,12 @@
     <PackageReference Include="Aspire.Hosting.AppHost" />
     <PackageReference Include="Aspire.Hosting.Azure" />
     <PackageReference Include="Aspire.Hosting.Azure.AppConfiguration" />
-    <PackageReference Include="Aspire.Hosting.Azure.ApplicationInsights"/>
+    <PackageReference Include="Aspire.Hosting.Azure.ApplicationInsights" />
     <PackageReference Include="Aspire.Hosting.Azure.CosmosDB" />
     <PackageReference Include="Aspire.Hosting.Azure.KeyVault" />
     <PackageReference Include="Aspire.Hosting.Azure.Sql" />
     <PackageReference Include="Aspire.Hosting.PostgreSQL" />
+    <PackageReference Include="Aspire.Hosting.Seq" />
   </ItemGroup>
   
   <ItemGroup>
