--- a/ch11/Codebreaker.AppHost/appsettings.json
+++ b/ch11/Codebreaker.AppHost/appsettings.json
@@ -21,6 +21,7 @@
     // change this to None to just use the dashboard
     // change this to AzureMonitor to use Azure App Insights with Azure Monitor
     // change this to GrafanaAndPrometheus to use Grafana and Prometheus
-    "Telemetry": "GrafanaAndPrometheus"
+    // change this to Seq to use Seq
+    "Telemetry": "Seq"
   }
 }
