Ch06 Add Azure App Services support and modernize deployment
Updated deployment workflows to support Azure App Services and Azure Container Apps. Introduced `ComputeEnvironment` enum and updated `appsettings.json` for environment-specific configurations. Added new package versions for `Aspire.Hosting.Azure.AppContainers` and `Aspire.Hosting.Azure.AppService`.

Replaced legacy Visual Studio solution file with `Chapter6.slnx` for better compatibility. Removed outdated Bicep scripts and Azure Developer CLI (`azd`) references, transitioning to Aspire CLI for resource management and deployment.

Streamlined infrastructure setup by removing unused parameters and simplifying initialization in SQL Server migration. Updated documentation to reflect these changes.

--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -5,6 +5,8 @@
     <NoWarn>$(NoWarn);NU1507</NoWarn>
   </PropertyGroup>
   <ItemGroup>
+    <PackageVersion Include="Aspire.Hosting.Azure.AppContainers" Version="13.0.0" />
+    <PackageVersion Include="Aspire.Hosting.Azure.AppService" Version="13.0.0-preview.1.25560.3" />
     <PackageVersion Include="Aspire.Hosting.Docker" Version="13.0.0-preview.1.25560.3" />
     <PackageVersion Include="Aspire.Hosting.Garnet" Version="13.0.0" />
     <PackageVersion Include="Aspire.Hosting.Keycloak" Version="9.2.1-preview.1.25222.1" />
