--- a/ch06/Codebreaker.AppHost/appsettings.json
+++ b/ch06/Codebreaker.AppHost/appsettings.json
@@ -6,16 +6,21 @@
       "Aspire.Hosting.Dcp": "Warning"
     }
   },
-  "CodebreakerSettings": {
-    // change this to SqlServer to use the SQL Server database
-    // change this to Cosmos to use the Azure Cosmos DB database
-    // change this to Postgres to use the PostgreSQL database
-    // change this to InMemory to use the in-memory repository
-    "DataStore": "Cosmos",
+    "CodebreakerSettings": {
+        // change this to SqlServer to use the SQL Server database
+        // change this to Cosmos to use the Azure Cosmos DB database
+        // change this to Postgres to use the PostgreSQL database
+        // change this to InMemory to use the in-memory repository
+        "DataStore": "Cosmos",
 
-    // change this to PreferLocal to use the Azure Cosmos DB local emulator (see the readme file how to install this on your local system, the emulator must be started)
-    // change this to PreferDocker to use the Azure Cosmos DB emulator in a Docker container (Docker Desktop must be installed and started)
-    // change this to UseAzure to use Azure resources while running locally! Check the user secrets (see the readme file)
-    "UseEmulator": "PreferDocker"
-  }
+        // change this to PreferLocal to use the Azure Cosmos DB local emulator (see the readme file how to install this on your local system, the emulator must be started)
+        // change this to PreferDocker to use the Azure Cosmos DB emulator in a Docker container (Docker Desktop must be installed and started)
+        // change this to UseAzure to use Azure resources while running locally! Check the user secrets (see the readme file)
+        "UseEmulator": "PreferDocker",
+
+        // change this to Local when running in local development environment
+        // change this to AzureContainerApps when running in Azure Container Apps
+        // change this to AzureAppService when running in Azure App Service
+        "ComputeEnvironment": "AzureAppService"
+    }
 }
