Replace custom OpenTelemetry Collector with toolkit
Replaced the custom OpenTelemetry Collector implementation with the `CommunityToolkit.Aspire.Hosting.OpenTelemetryCollector` package to simplify integration and reduce maintenance overhead.

- Added the `CommunityToolkit.Aspire.Hosting.OpenTelemetryCollector` package to `Directory.Packages.props` and `Codebreaker.AppHost.csproj`.
- Removed custom OpenTelemetry Collector classes and related logic.
- Updated `AppHost.cs` to configure the collector using Aspire Dashboard OTLP endpoint and Prometheus metrics.
- Updated `config.yaml` to use the new Prometheus exporter and removed unnecessary TLS settings.
- Updated `prometheus.yml` to scrape metrics from the OpenTelemetry Collector.
- Removed unused telemetry logic and cleaned up related code.
- Deleted the README for the custom OpenTelemetry Collector implementation.
- Fixed a BOM issue in `Codebreaker.AppHost.csproj`.

These changes improve maintainability and align the project with standardized telemetry practices.

--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -51,6 +51,7 @@
     <PackageVersion Include="CNinnovation.Codebreaker.GamesClient" Version="3.8.0" />
     <PackageVersion Include="CNinnovation.Codebreaker.Postgres" Version="3.8.0-preview.1.13" />
     <PackageVersion Include="CNinnovation.Codebreaker.SqlServer" Version="3.8.0" />
+    <PackageVersion Include="CommunityToolkit.Aspire.Hosting.OpenTelemetryCollector" Version="13.0.0-beta.439" />
     <PackageVersion Include="coverlet.collector" Version="6.0.4" />
     <PackageVersion Include="Grpc.AspNetCore" Version="2.71.0" />
     <PackageVersion Include="Grpc.Net.ClientFactory" Version="2.71.0" />
