--- a/ch11/otelcollector/config.yaml
+++ b/ch11/otelcollector/config.yaml
@@ -18,11 +18,10 @@ exporters:
       x-otlp-api-key: ${env:ASPIRE_API_KEY}
     tls:
         insecure: ${env:ASPIRE_INSECURE}
-        insecure_skip_verify: true # Required in local development because cert is localhost and the endpoint is host.docker.internal
-  otlphttp/prometheus:
-    endpoint: ${env:PROMETHEUS_ENDPOINT}
-    tls:
-        insecure: true
+        insecure_skip_verify: true
+  prometheus:
+    endpoint: 0.0.0.0:9464
+    namespace: codebreaker
   
 service:
   pipelines:
@@ -39,4 +38,4 @@ service:
       processors: [batch]
       exporters:
         - otlp/aspire
-        - otlphttp/prometheus
+        - prometheus
