Update default org_name for unauthenticated users
The `org_name` setting in the `[auth.anonymous]` section of
`grafana.ini` was updated. The default organization for
unauthenticated users was changed from `Codebreaker Org` to
`Main Org`. This ensures unauthenticated users are now
associated with the updated organization.

--- a/ch11/grafana/config/grafana.ini
+++ b/ch11/grafana/config/grafana.ini
@@ -2,7 +2,7 @@
 enabled = true
 
 # Organization name that should be used for unauthenticated users
-org_name = Codebreaker Org.
+org_name = Main Org.
 
 # Role for unauthenticated users, other valid values are `Editor` and `Admin`
 org_role = Admin
