Improve Grafana-Prometheus setup and add troubleshooting
Added a new troubleshooting section to address "No Data" issues in Grafana dashboards, including symptoms, causes, and solutions. Solutions cover datasource configuration, dashboard variable updates, and traffic generation.

Updated `default.yaml` to make Prometheus the default datasource, added `jsonData` for better performance, and removed hardcoded UID to prevent mismatches.

Modified `config.yaml` to include `const_labels` for Prometheus exporter, adding an `environment: development` label for better metric filtering. Removed the `namespace: codebreaker` configuration.

--- a/ch11/otelcollector/config.yaml
+++ b/ch11/otelcollector/config.yaml
@@ -21,7 +21,8 @@ exporters:
         insecure_skip_verify: true
   prometheus:
     endpoint: 0.0.0.0:9464
-    namespace: codebreaker
+    const_labels:
+      environment: development
   
 service:
   pipelines:
