--- a/ch11/grafana/config/provisioning/datasources/default.yaml
+++ b/ch11/grafana/config/provisioning/datasources/default.yaml
@@ -4,6 +4,9 @@ datasources:
   - name: Prometheus
     type: prometheus
     access: proxy
-    # Access mode - proxy (server in the UI) or direct (browser in the UI).
     url: $PROMETHEUS_ENDPOINT
-    uid: PBFA97CFB590B2093
+    isDefault: true
+    editable: true
+    jsonData:
+      httpMethod: POST
+      timeInterval: 1s
